adding careers page for job portal

--- a/careers.html
+++ b/careers.html
@@ -83,7 +83,7 @@
           <h2>Join Our Team</h2>
           <p>At Najuna General Supplies, we are always looking for talented and passionate individuals to join our growing team. We believe in creating a collaborative, innovative, and dynamic work environment where everyone has the opportunity to excel. Whether you are an experienced professional or a fresh graduate, we have various opportunities for you to explore.</p>
           <p>Explore our job openings and take the first step towards building a rewarding career with us. We offer competitive salaries, growth opportunities, and a positive work culture. If you're interested in a career that makes an impact, we would love to hear from you.</p>
-          <p>To view and apply for our current job listings, visit our <a href="https://yourjobportal.com" target="_blank">Job Portal</a>.</p>
+          <p>To view and apply for our current job listings, visit our <a href="jobportal.html" target="_blank">Job Portal</a>.</p>
         </div>
 
       </div>
