adding careers page for job portal

--- a/careers.html
+++ b/careers.html
@@ -108,7 +108,7 @@
   <!-- Tagline -->
   <span class="tagline" style="font-size: 1.2rem; font-weight: 600; color: #f44336;">Najuna General Supplies</span>
 </a>
-            <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
+           <p>We are committed to providing innovative solutions, fostering strong client relationships, and exceeding expectations through our dedicated team and unwavering ethical principles. Thank you for choosing us; we look forward to serving you with integrity and excellence.</p>
             <div class="social-links d-flex mt-4">
               <a href="https://www.facebook.com/najuna.general.supplies/"><i class="bi bi-facebook"></i></a>
               <a href="https://www.instagram.com/najunageneralsupplies/"><i class="bi bi-instagram"></i></a>
