--- a/jobportal.html
+++ b/jobportal.html
@@ -88,9 +88,9 @@
 
         <div class="social-icons">
             <p>Follow us for updates:</p>
-            <a href="https://www.facebook.com" target="_blank">Facebook</a>
-            <a href="https://www.twitter.com" target="_blank">Twitter</a>
-            <a href="https://www.instagram.com" target="_blank">Instagram</a>
+            <a href="https://https://www.facebook.com/najuna.general.supplies" target="_blank">Facebook</a>
+            <a href="https://www.youtube.com/@Najunageneralsuppliescompanyli" target="_blank">Youtube</a>
+            <a href="https://www.instagram.com/najunageneralsupplies" target="_blank">Instagram</a>
         </div>
     </div>
 
