--- a/jobportal.html
+++ b/jobportal.html
@@ -85,9 +85,9 @@
 
         <div class="social-icons">
             <p>Follow us for updates:</p>
-            <a href="https://https://www.facebook.com/najuna.general.supplies" target="_blank">Facebook</a>
-            <a href="https://www.youtube.com/@Najunageneralsuppliescompanyli" target="_blank">Youtube</a>
-            <a href="https://www.instagram.com/najunageneralsupplies" target="_blank">Instagram</a>
+              <a href="https://www.facebook.com/najuna.general.supplies/"><i class="bi bi-facebook"></i></a>
+              <a href="https://www.instagram.com/najunageneralsupplies/"><i class="bi bi-instagram"></i></a>
+              <a href="https://www.youtube.com/@Najunageneralsuppliescompanyli"><i class="bi bi-youtube"></i></a>
         </div>
     </div>
 
