adding careers page for job portal

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
   <div class="container">
     <h2 class="section-title">Our Services</h2>
 
-<p>Najuna General Supplies, we pride ourselves on delivering a diverse range of services designed to meet the dynamic needs of our clients. Our offerings include:
+<p>Najuna General Supplies, we provide a diverse range of services designed to meet the dynamic needs of our clients. Our offerings include:
 </p>
 
     <div class="services-grid">
@@ -215,7 +215,7 @@
        <!-- Service 8 -->
       <div class="service-card">
         <img src="assets/img/icons/fum.png" alt="Design Services Icon" class="service-icon">
-        <h3>Furmigation Services</h3>
+        <h3>Fumigation Services</h3>
          <p>We provide professional fumigation services for pest control in homes, businesses, and industries.</p>
       </div>
 
