adding careers page for job portal

--- a/index.html
+++ b/index.html
@@ -134,15 +134,8 @@
 
                 <div class="swiper-slide">
                   <div class="item">
-                    <h3 class="mb-3">Our Vision</h3>
-                    <p>To be a leading provider of exceptional procurement and supply services in Tanzania, recognized for our reliability, innovation, and unwavering commitment to customer satisfaction. We aim to set the benchmark for ethical business practices, fostering sustainable growth and contributing to the development of the communities we serve.</p>
-                  </div>
-                </div><!-- End slide item -->
-
-                <div class="swiper-slide">
-                  <div class="item">
-                    <h3 class="mb-3">Our Mission</h3>
-                    <p>To deliver high-quality products at competitive and fair prices, ensuring timely service while maintaining a sustainable profit margin. We are committed to providing reliable, professional, and effective solutions, supported by our skilled staff, shareholders, business partners, and the wider public across the nation. Our operations adhere to industry standards, emphasizing excellence, punctuality, and customer satisfaction.</p>
+                    <h3 class="mb-3">Mission and Vision</h3>
+                    <p>To Achieve customer satisfaction and excelency by builring a mutual beneficial relationship on trust and Intergrity</p>
                   </div>
                 </div><!-- End slide item -->
 
