adding careers page for job portal

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <div class="row g-0">
 
           <div class="col-xl-5 img-bg" data-aos="fade-up" data-aos-delay="100">
-            <img src="assets/img/abt.jpeg" alt="">
+            <img src="assets/img/abot.jpg" alt="">
           </div>
 
           <div class="col-xl-7 slides position-relative" data-aos="fade-up" data-aos-delay="200">
