adding careers page for job portal

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <div class="swiper-slide">
                   <div class="item">
                     <h3 class="mb-3">Mission and Vision</h3>
-                    <p>To Achieve customer satisfaction and excelency by building a mutual beneficial relationship on trust and Intergrity</p>
+                    <p>To Achieve customer satisfaction and excellency by building a mutual beneficial relationship on trust and Intergrity</p>
                   </div>
                 </div><!-- End slide item -->
 
