--- a/services.html
+++ b/services.html
@@ -449,7 +449,7 @@
             <p>9th Floor, Door No. 1903 Ghana/Ohio St</p>
             <p>PO BOX 18193 DSM</p>
             <p class="mt-3"><strong>Phone:</strong> <span>+255 677 101 041</span></p>
-            <p><strong>Email:</strong> <span>najunageneralsupplies@kgc.co.tz</span></p>
+            <p><strong>Email:</strong> <span>najunasupplies@kgc.co.tz</span></p>
           </div>
 
         </div>
