--- a/about.html
+++ b/about.html
@@ -180,6 +180,15 @@
         <p>At NGS, our greatest asset is our people. We are proud to have a team of highly skilled and experienced professionals who are dedicated to delivering excellence in every service we offer. Our staff members are rigorously trained, hold relevant qualifications, and bring unmatched expertise to all areas of our operations, ensuring exceptional service and customer satisfaction.</p>
       </div><!-- End Section Title -->
 
+<div id="slider-container">
+  <div id="slider-scroller">
+    <div class="slider-item"><img src="https://via.placeholder.com/250x150/0000ff/fff?text=Image+1" /></div>
+    <div class="slider-item"><img src="https://via.placeholder.com/200x100/ff0000/fff?text=Image+2" /></div>
+    <div class="slider-item"><img src="https://via.placeholder.com/200x150/acff7f/000?text=Image+3" /></div>
+    <div class="slider-item"><img src="https://via.placeholder.com/300x150/fff000/000?text=Image+4+is+long" /></div>
+    <div class="slider-item"><img src="https://via.placeholder.com/350x250/6a0dad/000?text=Image+5+is+big" /></div>
+  </div>
+
 
     <!-- Service Cards Section -->
     <section id="service-cards" class="service-cards section">
