my semi last commit

--- a/index.html
+++ b/index.html
@@ -134,8 +134,15 @@
 
                 <div class="swiper-slide">
                   <div class="item">
-                    <h3 class="mb-3">Mission and Vision</h3>
-                    <p>To Achieve customer satisfaction and excellency by building a mutual beneficial relationship on trust and Intergrity</p>
+                    <h3 class="mb-3">Vision</h3>
+                    <p>To become a country top liner service provider and supplier of goods while ensuring customer satisfaction.</p>
+                  </div>
+                </div><!-- End slide item -->
+
+                  <div class="swiper-slide">
+                  <div class="item">
+                    <h3 class="mb-3">Mission</h3>
+                    <p>To achieve customer satisfaction and excellency by building a mutual benefeicial relationship on trust and integrity.</p>
                   </div>
                 </div><!-- End slide item -->
 
