--- a/services.html
+++ b/services.html
@@ -89,8 +89,8 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="100">
             <div class="icon flex-shrink-0"><i class="bi bi-exclamation-triangle-fill" style="color: #f57813;"></i></div>
             <div>
-              <h4 class="title">Fumigation and Fire Safety Solutions</h4>
-              <p class="description">We offer professional fumigation services to ensure pest-free environments, along with the installation and maintenance of fire fighting equipment, including fire extinguishers, to enhance safety and compliance in residential, commercial, and industrial spaces.</p>
+              <h4 class="title">Fumigation</h4>
+              <p class="description"> NGS under fumigation and pest control is registered with Tropical Pesticides Research Institute [TPRI] with the Permit to deal with Fumigation Services and control of other Pests. Here at NGS we have well trained and experienced fumigators who have been in this business for more than 10 years. In order to have a successful treatment of rodents or pests on your premises and around the compound, our fumigators will use chemical treatments or non-chemical treatments</p>
             </div>
           </div>
           <!-- End Service Item -->
@@ -151,11 +151,19 @@
             </div>
           </div><!-- End Service Item -->
 
-                <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="600">
+                 <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="600">
             <div class="icon flex-shrink-0"><i class="bi bi-person-fill-check" style="color: #1335f5;"></i></div>
             <div>
               <h4 class="title">Recruitment and selection services</h4>
               <p class="description">We provide high-quality building materials for construction and renovation, including cement, steel, timber, roofing, tiles, and paints. All materials meet industry standards, ensuring durability and reliability for successful project completion.</p>
+            </div>
+          </div><!-- End Service Item -->
+
+            <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="600">
+            <div class="icon flex-shrink-0"><i class="bi bi-fire" style="color: #e69138;"></i></div>
+            <div>
+              <h4 class="title">Fire and Safety</h4>
+              <p class="description">We are registered with the Contractors Registration Board [CRB] with Certificate Number 00646 Registration No. SPM2/255/12/2017 00656 to deal with the Fire  Prevention and Protection system together with Certificate Number 00656 Registration No. SPM2/256/12/2017 to deal with plumbing and sanitation. Our company is also registered with the Ministry of Home Affairs Fire and Secure Force Act No. 14 of 2007 made under section 32 (g) with Certificate of Competence in Sales, Servicing and Installation.</p>
             </div>
           </div><!-- End Service Item -->
 
