--- a/about.html
+++ b/about.html
@@ -23,6 +23,12 @@
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <!-- Bootstrap CSS -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
+<!-- Bootstrap JS Bundle -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
@@ -174,20 +180,84 @@
     <!-- Team Section -->
     <section id="team" class="team section">
 
-      <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <h2>Our Team</h2>
-        <p>At NGS, our greatest asset is our people. We are proud to have a team of highly skilled and experienced professionals who are dedicated to delivering excellence in every service we offer. Our staff members are rigorously trained, hold relevant qualifications, and bring unmatched expertise to all areas of our operations, ensuring exceptional service and customer satisfaction.</p>
-      </div><!-- End Section Title -->
+<!-- Section Title -->
+<div class="container section-title" data-aos="fade-up">
+  <h2>Our Team</h2>
+  <p>At NGS, our greatest asset is our people. We are proud to have a team of highly skilled and experienced professionals who are dedicated to delivering excellence in every service we offer. Our staff members are rigorously trained, hold relevant qualifications, and bring unmatched expertise to all areas of our operations, ensuring exceptional service and customer satisfaction.</p>
+</div>
+<!-- End Section Title -->
 
-<div id="slider-container">
-  <div id="slider-scroller">
-    <div class="slider-item"><img src="https://via.placeholder.com/250x150/0000ff/fff?text=Image+1" /></div>
-    <div class="slider-item"><img src="https://via.placeholder.com/200x100/ff0000/fff?text=Image+2" /></div>
-    <div class="slider-item"><img src="https://via.placeholder.com/200x150/acff7f/000?text=Image+3" /></div>
-    <div class="slider-item"><img src="https://via.placeholder.com/300x150/fff000/000?text=Image+4+is+long" /></div>
-    <div class="slider-item"><img src="https://via.placeholder.com/350x250/6a0dad/000?text=Image+5+is+big" /></div>
+<!-- Team Carousel Section -->
+<div class="container" data-aos="fade-up">
+  <div id="teamCarousel" class="carousel slide" data-bs-ride="carousel">
+    
+    <div class="carousel-inner">
+
+      <!-- Slide 1 -->
+      <div class="carousel-item active">
+        <div class="row justify-content-center">
+          
+          <!-- Team Member Card -->
+          <div class="col-md-4">
+            <div class="card text-center">
+              <img src="assets/img/team/tm1.jpg" class="card-img-top" alt="Team Member 1">
+              <div class="card-body">
+              </div>
+            </div>
+          </div>
+
+          <!-- Team Member Card -->
+          <div class="col-md-4">
+            <div class="card text-center">
+              <img src="assets/img/team/tm2.jpg" class="card-img-top" alt="Team Member 2">
+              <div class="card-body">
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+
+      <!-- Slide 2 -->
+      <div class="carousel-item">
+        <div class="row justify-content-center">
+
+          <!-- Team Member Card -->
+          <div class="col-md-4">
+            <div class="card text-center">
+              <img src="assets/img/team/tm3.jpg" class="card-img-top" alt="Team Member 3">
+              <div class="card-body">
+              </div>
+            </div>
+          </div>
+
+          <!-- Team Member Card -->
+          <div class="col-md-4">
+            <div class="card text-center">
+              <img src="assets/img/team/tm4.jpg" class="card-img-top" alt="Team Member 4">
+              <div class="card-body">
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+
+    </div>
+
+    <!-- Carousel Controls -->
+    <button class="carousel-control-prev" type="button" data-bs-target="#teamCarousel" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#teamCarousel" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+
   </div>
+</div>
+<!-- End Team Carousel -->
 
 
     <!-- Service Cards Section -->
