--- a/about.html
+++ b/about.html
@@ -209,6 +209,25 @@
           <!-- Team Member Card -->
           <div class="col-md-4">
             <div class="card text-center">
+              <img src="assets/img/team/tm5.jpg" class="card-img-top" alt="Team Member 1">
+              <div class="card-body">
+              </div>
+            </div>
+          </div>
+
+<!-- Team Member Card -->
+          <div class="col-md-4">
+            <div class="card text-center">
+              <img src="assets/img/team/tm6.jpg" class="card-img-top" alt="Team Member 1">
+              <div class="card-body">
+              </div>
+            </div>
+          </div>
+
+
+          <!-- Team Member Card -->
+          <div class="col-md-4">
+            <div class="card text-center">
               <img src="assets/img/team/tm2.jpg" class="card-img-top" alt="Team Member 2">
               <div class="card-body">
               </div>
@@ -226,6 +245,24 @@
           <div class="col-md-4">
             <div class="card text-center">
               <img src="assets/img/team/tm3.jpg" class="card-img-top" alt="Team Member 3">
+              <div class="card-body">
+              </div>
+            </div>
+          </div>
+
+             <!-- Team Member Card -->
+          <div class="col-md-4">
+            <div class="card text-center">
+              <img src="assets/img/team/tm7.jpg" class="card-img-top" alt="Team Member 3">
+              <div class="card-body">
+              </div>
+            </div>
+          </div>
+
+             <!-- Team Member Card -->
+          <div class="col-md-4">
+            <div class="card text-center">
+              <img src="assets/img/team/tm8.jpg" class="card-img-top" alt="Team Member 3">
               <div class="card-body">
               </div>
             </div>
